--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Calculadora IVA Chile</title>
+  <title>Calculadora IVA El Epicentro</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
